--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,11 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "typo3/cms-core": "^11.5"
+    "php": "^7.4 || ^8.0",
+    "typo3/cms-core": "^10.4.29 || ^11.5",
+    "typo3/cms-extbase": "^10.4.29 || ^11.5",
+    "typo3/cms-form": "^10.4.29 || ^11.5",
+    "typo3/cms-frontend": "^10.4.29 || ^11.5"
   },
   "replace": {
     "typo3-ter/form-crshield": "self.version"
