--- a/.github/workflows/AcceptanceTests.yml
+++ b/.github/workflows/AcceptanceTests.yml
@@ -65,10 +65,10 @@ jobs:
           sleep 5;
 
       - name: Codeception Acceptance Tests with chrome (JavaScript enabled)
-        run: .Build/bin/codecept run acceptance --fail-fast --env=github-actions -c Tests/Build/AcceptanceTestsChrome.yml --html
+        run: .Build/bin/codecept run acceptance --env=github-actions -c Tests/Build/AcceptanceTestsChrome.yml --html
 
       - name: Codeception Acceptance Tests with phpbrowser (no JavaScript)
-        run: .Build/bin/codecept run acceptance --fail-fast --env=github-actions -c Tests/Build/AcceptanceTestsPhpBrowser.yml --html
+        run: .Build/bin/codecept run acceptance --env=github-actions -c Tests/Build/AcceptanceTestsPhpBrowser.yml --html
 
       - name: Upload Codeception output
         if: ${{ always() }}
