--- a/.github/workflows/AcceptanceTests.yml
+++ b/.github/workflows/AcceptanceTests.yml
@@ -26,7 +26,9 @@ jobs:
           sudo rm -rf ~/.composer
 
       - name: Validate composer.json and composer.lock
-        run: composer validate
+        run: |
+          cd .Build
+          composer validate
 
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -36,12 +38,14 @@ jobs:
 
       - name: Install composer dependencies
         run: |
+          cd .Build
           composer install --no-progress
 
       - name: Initialize TYPO3 environment
         run: |
           cp -R Tests/Acceptance/Fixtures/fileadmin .Build/public/
-          cp -R Tests/Acceptance/Fixtures/config .
+          cp -R Tests/Acceptance/Fixtures/config .Build
+          cd .Build
           echo "Run 'composer install' to activate extension"
           composer install --no-progress
 
