[!!!][FEATURE] Added TYPO3 v13 compatibility

--- a/.Build/composer.json
+++ b/.Build/composer.json
@@ -9,19 +9,18 @@
     ],
     "require": {
         "derhansen/form_crshield": "@dev",
-        "php": "^7.2 || ^8.0",
-        "typo3/cms-core": "^10.4.29 || ^11.5 || ^12.4",
-        "typo3/cms-extbase": "^10.4.29 || ^11.5 || ^12.4",
-        "typo3/cms-form": "^10.4.29 || ^11.5 || ^12.4",
-        "typo3/cms-frontend": "^10.4.29 || ^11.5 || ^12.4"
+        "typo3/cms-core": "^13.2 || dev-main",
+        "typo3/cms-extbase": "^13.2 || dev-main",
+        "typo3/cms-form": "^13.2 || dev-main",
+        "typo3/cms-frontend": "^13.2 || dev-main"
     },
     "require-dev": {
-        "typo3/cms-backend": " ^12.4",
-        "typo3/cms-recordlist": "^12.4",
-        "typo3/cms-fluid-styled-content": "^12.4",
-        "typo3/cms-tstemplate": "^12.4",
-        "typo3/cms-install": "^12.4",
-        "typo3/cms-extensionmanager": "^12.4",
+        "typo3/cms-backend": " ^13.2 || dev-main",
+        "typo3/cms-recordlist": "^13.2 || dev-main",
+        "typo3/cms-fluid-styled-content": "^13.2 || dev-main",
+        "typo3/cms-tstemplate": "^13.2 || dev-main",
+        "typo3/cms-install": "^13.2 || dev-main",
+        "typo3/cms-extensionmanager": "^13.2 || dev-main",
         "codeception/codeception": "^5.0",
         "codeception/module-webdriver": "^3.2.0",
         "codeception/module-db": "^3.0.1",
