--- a/Tests/Acceptance/WithChromeBrowser/_envs/local.yml
+++ b/Tests/Acceptance/WithChromeBrowser/_envs/local.yml
@@ -1,8 +1,8 @@
 modules:
   config:
       WebDriver:
-        url: http://form-crshield-acceptance-v12.typo3.local/
+        url: http://form-crshield-acceptance-v13.typo3.local/
       Db:
-        dsn: 'mysql:host=localhost;dbname=typo3_formcrshield_acceptance_v12'
+        dsn: 'mysql:host=127.0.0.1;dbname=typo3_formcrshield_acceptance_v13;port=3406'
         user: '%DB_USERNAME%'
-        password: '%DB_PASSWORD%'
+        password: '%DB_PASSWORD_V8%'
