--- a/.Build/composer.json
+++ b/.Build/composer.json
@@ -27,6 +27,7 @@
         "codeception/module-asserts": "^3.0.0"
     },
     "config": {
+        "lock": false,
         "allow-plugins": {
             "typo3/class-alias-loader": true,
             "typo3/cms-composer-installers": true
